trying to fix errors

--- a/homework/homework_2.2.html
+++ b/homework/homework_2.2.html
@@ -13,11 +13,11 @@
   <input type="radio" name="whereEating" value="Carry Out"> Carry Out <br>
   <input type="radio" name="whereEating" value="Delivery"> Delivery <br>
 </form>
-<select>
-  <option id="foodType" value="korean">Korean</option>
-  <option id="foodType" value="indian">Indian</option>
-  <option id="foodType" value="mediterranean">Mediterranean</option>
-  <option id="foodType" value="northAmerican">North American</option>
+<select id="foodType">
+  <option value="korean">Korean</option>
+  <option value="indian">Indian</option>
+  <option value="mediterranean">Mediterranean</option>
+  <option value="northAmerican">North American</option>
 </select>
 </body>
 
