changed the content string to have an image of the UIC logo

--- a/homework/homework_8.2.html
+++ b/homework/homework_8.2.html
@@ -25,7 +25,7 @@
       // When the user clicks the marker, an info window opens.
 
       function initMap() {
-        var uluru = {lat: -25.363, lng: 131.044};
+        var uluru = {lat:  41.8695401, lng:  -87.6511328};
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 4,
           center: uluru
@@ -34,21 +34,13 @@
         var contentString = '<div id="content">'+
             '<div id="siteNotice">'+
             '</div>'+
-            '<h1 id="firstHeading" class="firstHeading">Uluru</h1>'+
+            '<h1 id="firstHeading" class="firstHeading">UIC</h1>'+
             '<div id="bodyContent">'+
-            '<p><b>Uluru</b>, also referred to as <b>Ayers Rock</b>, is a large ' +
-            'sandstone rock formation in the southern part of the '+
-            'Northern Territory, central Australia. It lies 335&#160;km (208&#160;mi) '+
-            'south west of the nearest large town, Alice Springs; 450&#160;km '+
-            '(280&#160;mi) by road. Kata Tjuta and Uluru are the two major '+
-            'features of the Uluru - Kata Tjuta National Park. Uluru is '+
-            'sacred to the Pitjantjatjara and Yankunytjatjara, the '+
-            'Aboriginal people of the area. It has many springs, waterholes, '+
-            'rock caves and ancient paintings. Uluru is listed as a World '+
-            'Heritage Site.</p>'+
-            '<p>Attribution: Uluru, <a href="https://en.wikipedia.org/w/index.php?title=Uluru&oldid=297882194">'+
-            'https://en.wikipedia.org/w/index.php?title=Uluru</a> '+
-            '(last visited June 22, 2009).</p>'+
+            '<p><b>UIC</b>, is Chicago\'s public research university. ' +
+            'It is one of the most diverse universities in America. ' + 
+            '<br><br>This is the UIC logo: <br><br><img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/University_of_Illinois_at_Chicago_circle_logo.svg/800px-University_of_Illinois_at_Chicago_circle_logo.svg.png" width = "100" height = "100"> '
+            + '<br><br>This is a link to the UIC website: <a href="https://www.uic.edu">'+
+            'https://www.uic.edu/</a> </p>'+
             '</div>'+
             '</div>';
 
