--- a/homework/homework_8.2.html
+++ b/homework/homework_8.2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Map</title>
+    <title>Point to UIC</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <style>
@@ -25,10 +25,10 @@
       // When the user clicks the marker, an info window opens.
 
       function initMap() {
-        var uluru = {lat:  41.8695401, lng:  -87.6511328};
+        var uic = {lat:  41.8695401, lng:  -87.6511328};
         var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 4,
-          center: uluru
+          zoom: 18,
+          center: uic
         });
 
         var contentString = '<div id="content">'+
@@ -38,6 +38,7 @@
             '<div id="bodyContent">'+
             '<p><b>UIC</b>, is Chicago\'s public research university. ' +
             'It is one of the most diverse universities in America. ' + 
+            '<br><br> There are 16 colleges and 86 bachelor\'s programs at UIC' +
             '<br><br>This is the UIC logo: <br><br><img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/University_of_Illinois_at_Chicago_circle_logo.svg/800px-University_of_Illinois_at_Chicago_circle_logo.svg.png" width = "100" height = "100"> '
             + '<br><br>This is a link to the UIC website: <a href="https://www.uic.edu">'+
             'https://www.uic.edu/</a> </p>'+
@@ -49,9 +50,9 @@
         });
 
         var marker = new google.maps.Marker({
-          position: uluru,
+          position: uic,
           map: map,
-          title: 'Uluru (Ayers Rock)'
+          title: 'UIC'
         });
         marker.addListener('click', function() {
           infowindow.open(map, marker);
