--- a/homework/homework_8.3.html
+++ b/homework/homework_8.3.html
@@ -1,66 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Point to UIC</title>
-    <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
+    <title>Shopping list example</title>
     <style>
-      /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      #map {
-        height: 100%;
+      li {
+        margin-bottom: 10px;
       }
-      /* Optional: Makes the sample page fill the window. */
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
+
+      li button {
+        font-size: 8px;
+        margin-left: 20px;
+        color: #666;
       }
     </style>
   </head>
   <body>
-    <div id="map"></div>
+
+    <h1>My shopping list</h1>
+
+    <div>
+      <label for="item">Enter a new item:</label>
+      <input type="text" name="item" id="item">
+      <button>Add item</button>
+    </div>
+
+    <ul>
+
+    </ul>
+
     <script>
-      // This example displays a marker at the center of Australia.
-      // When the user clicks the marker, an info window opens.
 
-      function initMap() {
-        var uic = {lat:  41.8695401, lng:  -87.6511328};
-        var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 18,
-          center: uic
-        });
-
-        var contentString = '<div id="content">'+
-            '<div id="siteNotice">'+
-            '</div>'+
-            '<h1 id="firstHeading" class="firstHeading">UIC</h1>'+
-            '<div id="bodyContent">'+
-            '<p><b>UIC</b>, is Chicago\'s public research university. ' +
-            'It is one of the most diverse universities in America. ' + 
-            '<br><br> There are 16 colleges and 86 bachelor\'s programs at UIC' +
-            '<br><br>This is the UIC logo: <br><br><img src = "https://upload.wikimedia.org/wikipedia/commons/thumb/9/96/University_of_Illinois_at_Chicago_circle_logo.svg/800px-University_of_Illinois_at_Chicago_circle_logo.svg.png" width = "100" height = "100"> '
-            + '<br><br>This is a link to the UIC website: <a href="https://www.uic.edu">'+
-            'https://www.uic.edu/</a> </p>'+
-            '</div>'+
-            '</div>';
-
-        var infowindow = new google.maps.InfoWindow({
-          content: contentString
-        });
-
-        var marker = new google.maps.Marker({
-          position: uic,
-          map: map,
-          title: 'UIC'
-        });
-        marker.addListener('click', function() {
-          infowindow.open(map, marker);
-        });
-      }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAujKzyHSByW_g3z-CRvoxFEFIBjhe9YPg&callback=initMap"
-    async defer></script>
   </body>
 </html>
-
