--- a/activity_8.2/index.html
+++ b/activity_8.2/index.html
@@ -55,7 +55,8 @@
           'This is the name of the place: ' + name
           + '<br> This is the facility type: ' + fType
           + '<br> This is the address of the place: ' + address
-          + '<br> This is the inspectionDate: ' + inspecDate +
+          + '<br> This is the inspectionDate: ' + inspecDate 
+          + '<br> This is the results: ' + results +
           '</div>'+
           '</div>';
           
