--- a/activity_9.1/index.html
+++ b/activity_9.1/index.html
@@ -12,6 +12,9 @@
         top: 0px;
         left: 0px;
       }
+      :root {
+        --mdc-theme-primary: green;
+      }
     </style>
   </head>
   <body>
