--- a/activity_9.1/index.html
+++ b/activity_9.1/index.html
@@ -37,9 +37,34 @@
         <span class="mdc-button__label">Button</span>
       </button>
     </main>
+
+     <aside class="mdc-drawer mdc-drawer--modal">
+      <div class="mdc-drawer__content">
+        <nav class="mdc-list">
+          <a class="mdc-list-item mdc-list-item--activated" href="#" aria-current="page">
+            <i class="material-icons mdc-list-item__graphic" aria-hidden="true">inbox</i>
+            <span class="mdc-list-item__text">Inbox</span>
+          </a>
+          <a class="mdc-list-item" href="#">
+            <i class="material-icons mdc-list-item__graphic" aria-hidden="true">send</i>
+            <span class="mdc-list-item__text">Outgoing</span>
+          </a>
+          <a class="mdc-list-item" href="#">
+            <i class="material-icons mdc-list-item__graphic" aria-hidden="true">drafts</i>
+            <span class="mdc-list-item__text">Drafts</span>
+          </a>
+        </nav>
+      </div>
+    </aside>   
+
+    <div class="mdc-drawer-scrim"></div>
+    <div>Main Content</div>
     
     <script>
-    mdc.ripple.MDCRipple.attachTo(document.querySelector('.foo-button'));
+      mdc.ripple.MDCRipple.attachTo(document.querySelector('.foo-button'));
+      mdc.topAppBar.MDCTopAppBar.attachTo(document.querySelector('header.mdc-top-app-bar'));
+      mdc.drawer.MDCDrawer.attachTo(document.querySelector('aside.mdc-drawer'));
+      
     </script>
   </body>
 </html>
