--- a/activity_9.1/index.html
+++ b/activity_9.1/index.html
@@ -63,8 +63,11 @@
     <script>
       mdc.ripple.MDCRipple.attachTo(document.querySelector('.foo-button'));
       mdc.topAppBar.MDCTopAppBar.attachTo(document.querySelector('header.mdc-top-app-bar'));
-      mdc.drawer.MDCDrawer.attachTo(document.querySelector('aside.mdc-drawer'));
-      
+      const drawer = mdc.drawer.MDCDrawer.attachTo(document.querySelector('aside.mdc-drawer'));
+      document.querySelector(".mdc-top-app-bar__navigation-icon").addEventListener("click", 
+                                                                                 (e) => {
+        drawer.open = true;
+      });
     </script>
   </body>
 </html>
