took out the furthest icon

--- a/activity_9.3/index.html
+++ b/activity_9.3/index.html
@@ -40,7 +40,7 @@
           <span class="mdc-list-item__primary-text">Two-line item</span>
           <span class="mdc-list-item__secondary-text">Secondary text</span>
         </span>
-        <span class="mdc-list-item__meta material-icons" aria-hidden="true">info</span>
+<!--         <span class="mdc-list-item__meta material-icons" aria-hidden="true">info</span> -->
       </li>
     </div>
     
